--- a/django_ds1/ds/home.html
+++ b/django_ds1/ds/home.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" href="/static/DataTables/media/css/jquery.dataTables.css">
 <script type="text/javascript" charset="utf8" src="/static/DataTables/media/js/jquery.dataTables.js"></script>
 <script type="text/javascript">
-	$(document).ready( function () { $('#ds_list').DataTable( { ajax: '/ds/data/', select: true } ); } );
+	$(document).ready( function () { $('#ds_list').DataTable( { ajax: '/ds/data/'} ); } );
 </script>
 {% endblock %}
 
