--- a/tst_wp/p1/base_p1.html
+++ b/tst_wp/p1/base_p1.html
@@ -3,6 +3,7 @@
 
   <head>
     <title>{% block page_title %} PAGE P1 {% endblock %}</title>
+    <link rel="stylesheet" href="/static/css/reset.css" type="text/css">
     <link rel="stylesheet" href="/static/css/w3.css" type="text/css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	{% block css %} {% endblock %}
@@ -12,10 +13,10 @@
   <body id="index" class="home"> 
     
     <header class="w3-container w3-blue-grey w3-margin-top">
-      <h1>
+      <p class="w3-xlarge" >
 		  <a href="#">{% block TITRE %}P1{% endblock %} </a>
-	  </h1>
-	  <strong> {% block SousTitre %}Super Test de Page{% endblock %} </strong>
+	  </p>
+	  <p class="w3-large"> {% block SousTitre %}Super Test de Page{% endblock %} </p>
       <nav  class="w3-topnav w3-teal">
           <a href="/p1">home</a>
           <a href="/p1/f1">form1</a>
@@ -36,7 +37,7 @@
     
     <footer class="w3-container w3-blue-grey w3-margin-top">
 		{% block page_footer %}
-		<p class="page-footer">  (c) Chris / SRA  : developpé avec DJANGO </p>
+		<p class="w3-tiny"> (c) Chris / SRA  : developpé avec DJANGO </p>
 		{% endblock %}
     </footer>
     <!-- /#extras -->
