--- a/tst_wp/p1/table.html
+++ b/tst_wp/p1/table.html
@@ -8,13 +8,13 @@
 <script src='/static/jquery-2.1.4.min.js' type="text/javascript"></script>
 <script type="text/javascript" charset="utf8" src="/static/DataTables/media/js/jquery.dataTables.js"></script>
 <script>
-	$(document).ready(function() { $('#example').DataTable(); } );
+	$(document).ready(function() { $('#example').DataTable( {"lengthMenu": [[15, 25, 50, 100, -1], [15, 25, 50, "All"]]} ); } );
 </script>
 {% endblock %}
 
 
 {% block content %}
-<table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
+<table id="example" class="table table-striped table-bordered cell-border hover" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th>Name</th>
