Creation focntionne ajourt bouton go back + erreurs sur la form de creation passage de Form.forms a Form.ModelForm

--- a/django_ds1/ds/ds_form.html
+++ b/django_ds1/ds/ds_form.html
@@ -13,8 +13,13 @@
 </div>
 
 	{% if form.errors %}
-		<p> ERREUR FORM </p>
-		<a href='/'> BACK </a>
+		<div class="alert alert-warning" role="alert">
+		<p> Erreur(s) </p>
+		</div>
+		{{ form.errors }}
+		<div class="btn-group" role="group" aria-label="...">
+		<a href="javascript:history.back()"  class="btn btn-info" role="button" > GO BACK </a>
+		</div>
 	{% else %}
 		{% if request.user.is_authenticated %}
 			<ul class="breadcrumb">
