DS => Liste a datatables OK creation => ok modif => ok suppr => ok Edition Fiche + Liste => a faire Ergo + Look a revoir

--- a/django_ds1/ds/home.html
+++ b/django_ds1/ds/home.html
@@ -61,7 +61,8 @@
             <th>Temps Estimé</th>
             <th>Temps Réalisé</th>
             <th>Echéance</th>
-            <th>Actions</th>
+            <th>Modif</th>
+            <th>Suppr</th>
         </tr>
     </thead>
     <tbody>
